@@ -22,6 +22,7 @@ includesdir = $(includedir)/eet-@VMAJ@
 lib_LTLIBRARIES = libeet.la
 
 base_sources = \
+eet_alloc.c \
 eet_lib.c \
 eet_data.c \
 eet_image.c \
